fix: adjust scrollbar track margin for improved styling

--- a/src/styles/!GLOBALS.css
+++ b/src/styles/!GLOBALS.css
@@ -105,7 +105,7 @@ main {
 
     &::-webkit-scrollbar-track {
         background-color: transparent;
-        margin: 10px;
+        margin: 8px;
 
         &:hover {
             background-color: #55555744;
